br doesnt work there

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="mr-[20px] ml-[20px] mt-[10px] w-8/10 h-[175px] flex flex-col flex-nowrap bg-gray-100 dark:bg-gray-800 r
 ounded-xl text-center items-center justify-center">
         <h2>Add to a Package Manager</h2>
-        <br>
+        <div class="mt-[5px]"></div>
         <div class="flex flex-row flex-wrap">
             <a href="sileo://source/https://apt.itsnebula.net/" class="text-white bg-blue-700 hover:bg-blue-800 focus
 :ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-4 lg:px-5 py-2 lg:py-2.5 mr-2 dark:bg-blue-600 dark:hover
